G1 crashes during calculation of old collection set candidates

XMLWordPrintable

    • gc
    • b08

      BigRAMTester crashes after a while after the changes for JDK-8217330 with

      Unexpected Error
      ------------------------------------------------------------------------------
      Internal Error at g1CollectionSetChooser.cpp:118, pid=40852, tid=40888
      assert(_max_size > result - 1) failed: Array too small, is 644 should be 672 with chunk size 28.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: