8218680: G1 crashes during calculation of old collection set candidates

Parameters were passed in the wrong order to some helper class.

Reviewed-by: shade, kbarrett, lkorinth